--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./quero-trabalhar-na-enext/assets/css/responsivo.css">
     <link rel="stylesheet" href="./quero-trabalhar-na-enext/assets/css/animações.css">
+    <link rel="shortcut icon" href="./quero-trabalhar-na-enext/assets/images/favicon-16x16.png" type="image/x-icon">
     <title> Poçoes </title>
 </head>
 <body>
